<resources>
    <string name="app_name">FriendSchedule</string>
    <string name="list">Lista de contactos</string>
    <string name="add">Agregar contacto</string>

    <!--Activity de Agregar contactos-->
    <string name="agregar_titulo">Agregar Amigo</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="segundo_nombre">Segundo Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="telefono">Numero de telefono</string>
    <string name="email">Correo electronico</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="btGuardar">Guardar</string>
    <string name="btActualizar">Actualizar</string>
    <string name="btCancelar">Cancelar</string>
    <string name="home_description">
        Agrega a todos tus amigos y recuerdalos en todo momento.
        Recuerda sus fechas de cumpleaños y más.
    </string>
</resources>