<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarActivity"
    android:nestedScrollingEnabled="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_titulo"
            android:textSize="24dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etPrimerNombre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/primer_nombre"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etSegundoNombre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/segundo_nombre"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etPrimerApellido"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/primer_apellido"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etSegundoApellido"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/segundo_apellido"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/fecha_nacimiento"
            android:inputType="date"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btGuardar"
                android:textColor="@color/colorFondo"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cancelButton"
                android:text="@string/btCancelar"
                android:textColor="@color/colorFondo"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>